# nestl

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.py
include/nestl/: allocator.hpp  result.hpp  utility.hpp  variant.hpp  vector.hpp
include/nestl/detail/: reverse_iterator.hpp  storage.hpp  variant_base.hpp
test/: main.cpp  result.cpp  test_utils.hpp  variant.cpp  vector.cpp
tests/: result.cpp  variant.cpp  vector.cpp
